# poetry-solve-plugin

./: README.md  pyproject.toml
.github/workflows/: gh-pages.yml  pypi.yml  test.yml
docs/: conf.py  index.rst
docs/_static/css/: custom.css
poetry_solve_plugin/: __init__.py  installer.py  lock.py  provider.py  solve_plugin.py
tests/: __init__.py  compat.py  conftest.py  helpers.py  test_solve.py  types.py
tests/command/: test_command_solve.py
tests/commands/: solve.py
tests/console/: conftest.py
tests/console/commands/: test_solve_command.py
tests/puzzle/: test_solver.py  test_solver_new.py
tests/repositories/: test_legacy_repository.py  test_pypi_repository.py
